2020-08-12  Jacob Bachmeyer  <jcb@gnu.org>

	* doc/dejagnu.texi (The dejagnu_h header file): Remove node.
	(Running unit tests): Add node.
	(DejaGnu unit test protocol): Add node.
	(C unit testing API): Update to reflect current API.  Move mention
	of dejagnu.h header here in preparation for future expanded
	language support.
	(C++ unit testing API): Likewise.  Mention caveat that the C unit
	test API is also available in C++ programs.

2020-08-10  Jacob Bachmeyer  <jcb@gnu.org>

	* baseboards/qemu.exp: Tidy whitespace.

2020-08-10  Jacob Bachmeyer  <jcb@gnu.org>

	Merge patch from Kito Cheng to add support for RISC-V sim target.

	* baseboards/riscv-sim.exp: New file.
	* Makefile.am (baseboard_DATA): Add riscv-sim.exp.
	* Makefile.in (baseboard_DATA): Likewise.

2020-08-02  Jacob Bachmeyer  <jcb@gnu.org>

	* Makefile.am (TESTSUITE_FILES): Add files that were introduced
	during development but were mistakenly not added at that time.
	(baseboard_DATA): Sort baseboard file list.
	(baseboard_DATA): Add missing files.
	(dejagnu_TEXINFOS): New; add GNU FDL file.
	(CONTRIB): Add experimental Python unit test module.

	* Makefile.in (TESTSUITE_FILES): Likewise.
	(baseboard_DATA): Likewise.

	* testsuite/dejagnu.py:  Move from here...
	* contrib/dejagnu.py: ...to here.

2020-08-02  Rob Savoye  <rob@senecass.com>

	* Makefile.in: Regenerate so make dist works.

2020-07-25  Jacob Bachmeyer  <jcb62281+dev@gmail.com>

	* doc/dejagnu.texi (Writing a test case): Mention the DejaGnu
	procedure "perror" instead of the Tcl command "error".
	(Writing a test case): Reorganize node and give basic hints about
	Tcl quoting and backslash escape rules.
	(Writing a test case): Describe synchronization issues and warn
	that prefixes of valid input can be presented for matching.
	(Writing a test case): Fix markup from conversion from DocBook.

2020-07-22  Jacob Bachmeyer  <jcb62281+dev@gmail.com>

	PR42399

	* NEWS: Document changes to host_execute.
